<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">好食在</string>
    <string name="action_settings">Settings</string>
    <string name="near_text">附近</string>
    <string name="random_text">籤筒</string>
    <string name="search_text">搜尋</string>
    <string name="hot_text">熱門</string>
    <string name="favorite_text">最愛</string>
    <string name="insert_text">上傳</string>
    <string name="email_text">建議</string>
    <string name="info_text">關於</string>



</resources>
