<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#dcdcdc"
    tools:context="com.example.haojia.MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:background="#dcdcdc" >

        <!-- 第一行 -->
        <!-- 附近 -->

        <LinearLayout
            android:id="@+id/nearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/near_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/near_icon"
                android:scaleType="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/near_text"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- 籤筒 -->

        <LinearLayout
            android:id="@+id/randomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/nearLayout"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/random_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/random_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/random_text" 
                android:textStyle="bold"/>
        </LinearLayout>
        <!-- 搜尋 -->

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/randomLayout"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/search_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/search_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/search_text"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- 第二行 -->
        <!-- 熱門 -->

        <LinearLayout
            android:id="@+id/hotLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nearLayout"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/hot_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/hot_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/hot_text"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- 最愛 -->

        <LinearLayout
            android:id="@+id/favoriteLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/randomLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/hotLayout"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/favorite_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/favorite_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/favorite_text"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- 上傳 -->

        <LinearLayout
            android:id="@+id/insertLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/favoriteLayout"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/insert_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/insert_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/insert_text"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- 第三行 -->
        <!-- 建議 -->

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hotLayout"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/email_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/email_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/email_text"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- 關於 -->

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/favoriteLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/emailLayout"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/info_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/info_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/info_text"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="fill_parent"
        android:layout_height="215dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#00000000" >

        <com.example.haojia.ViewFlow
            android:id="@+id/viewflow"
            android:layout_width="fill_parent"
            android:layout_height="215dp" >
        </com.example.haojia.ViewFlow>

        <LinearLayout
            android:id="@+id/lunbo"
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:layout_gravity="bottom"
            android:background="#88252525"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dip" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.example.haojia.CircleFlowIndicator
                android:id="@+id/viewflowindic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:padding="2dip"
                android:radius="4dip" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>